dev/Styles/User/Attachments.less
.attachmentItem {

	background-color: rgba(128, 128, 128, 0.1);
	border: 0;
	border-radius: 3px;
	box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.04), 0 1px 5px rgba(0, 0, 0, 0.1);
	display: inline-block;
	list-style: none;
	line-height: 24px;
	margin: 5px;
	min-height: 50px;
	max-width: 200px;
	min-width: 60px;
	overflow: hidden;
	position: relative;

	&.waiting {
		opacity: 0.6;
	}

	.checkboxAttachment {
		bottom: 6px;
		cursor: pointer;
		position: absolute;
		right: 6px;
	}

	&.error {
		.iconMain, .iconPreview, .attachmentSize, .attachmentName {
			color: red;
		}
	}

	.attachmentIconParent {
		position: absolute;
		height: 56px;
		width: 60px;
		text-align: center;
	}

	.iconPreview, .iconBG, .iconMain, .iconProgress {
		position: absolute;
		top: 0;
		left: 0;
		width: 100%;
		height: 100%;
	}

	.iconProgress {
		background: #eee;
		width: 0%;
	}

	.iconBG {
		font-size: 18px;
		font-weight: bold;
		line-height: 55px;
		text-shadow: 0 1px 0 rgba(255, 255, 255, 0.8);
	}

	.iconPreview {
		display: none;
	}

	.attachmentNameParent {
		border-left: 1px solid #ddd;
		cursor: pointer;
		margin-left: 60px;
		min-width: 90px;
		padding: 4px 4px 3px 6px;
		position: relative;
	}

	.attachmentName {
		overflow: hidden;
		text-overflow: ellipsis;
		white-space: nowrap;
	}

	.attachmentSize {
		font-size: 12px;
		opacity: 0.5;
	}

	.iconMain, .iconPreview {
		box-sizing: border-box;
		padding: 6px 0 0;
		font-size: 36px;
		color: #aaa;

		&.icon-none {
			display: none;
		}
	}

/*
	.attachmentIconParent.hasPreview.isImage {
		.iconMain {
			display: none;
		}
	}
*/

	.showPreview, .showPreplay,
	.hasPreview:hover .iconMain,
	.hasPreplay:hover .iconMain,
	.hasPreview .hidePreview,
	.hasPreplay .hidePreview {
		display: none;
	}

	.hasPreview:hover .iconPreview,
	.hasPreplay:hover .iconPreview {
		display: inline-block;
	}

	.hasPreview .showPreview,
	.hasPreplay .showPreplay {
		display: inline;
		cursor: pointer;
	}
}

